# AlembicReader

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md
RNO_Engine/: RNO_Engine.cpp
assets/: cube.abc
src/: .editorconfig  AlembicFileReader.cpp  AlembicFileReader.h  Engine.cpp  Logger.cpp  Logger.h
